# llmcluster

./: .pre-commit-config.yaml  404.html  README.md  data.json  index.html  pyproject.toml  search.json  tasks.py
.github/workflows/: ci.yml  docs.yml  pip_publish.yml
builds/tests/: index.html
builds/tests/1/: index.html
builds/tests/1/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
builds/tests/1/export/: influxDbData.txt  prometheusData.txt
builds/tests/1/history/: duration-trend.json  history.json  retry-trend.json
builds/tests/1/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
builds/tests/2/: index.html
builds/tests/2/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
builds/tests/2/export/: influxDbData.txt  (+1 more)
builds/tests/3/: index.html
builds/tests/4/: index.html
docs/: mkdocs.yml
docs/common/: reference.md
docs/src/en/: index.md  installation.md
docs/src/ru/: index.md  installation.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2d05e4e04c835b04___about___py.html  z_2d05e4e04c835b04_main_py.html  z_e1c86ac91afabe74___about___py.html  z_e1c86ac91afabe74_main_py.html
installation/: index.html
reference/: index.html
ru/: 404.html  index.html  objects.inv  search.json  sitemap.xml
ru/installation/: index.html
ru/reference/: index.html
scripts/: verup.sh
src/llmbroker/: __init__.py  main.py
src/llmcluster/: __init__.py  main.py
tests/: test_llmbroker.py  test_llmcluster.py
(+47 files in other folders)
