[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "llmcluster"
dynamic = [ "version",]
description = ""
keywords = [ "one", "two", ]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.0",
    "rich-click>=1.8.8",
]
[[project.authors]]
name = "Andrey Sorokin"
email = "andrey@sorokin.engineer"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://andgineer.github.io/llmcluster/"
Documentation = "https://andgineer.github.io/llmcluster/"

[tool.setuptools]
packages = "find:"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.manifest]
include = [ "README.md", "LICENSE",]

[tool.ruff]
line-length = 99

[tool.hatch.version]
path = "src/llmcluster/__about__.py"

[tool.uv]
dev-dependencies = [
    "allure-pytest>=2.14.2",
    "invoke>=2.2.0",
    "tomli-w>=1.2.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "zensical>=0.0.41",
    "mkdocstrings[python]>=0.29.1",

    "pre-commit>=4.2.0",
    "pymdown-extensions>=10.15",
    "pyrefly>=0.50.0",
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
]

[project.scripts]
llmcluster = "llmcluster.main:llmcluster"
